--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "20.0.0",
   "private": true,
   "scripts": {
+    "start": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
     "ag-grid-community": "^19.1.0",
     "ag-grid-vue": "^19.1.0",
-    "vue": "^2.5.17",
-    "vue-class-component": "^6.3.0",
-    "vue-property-decorator": "^7.2.0"
+    "vue": "2.5.21",
+    "vue-class-component": "6.3.2",
+    "vue-property-decorator": "7.2.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-typescript": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
-    "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "@vue/cli-plugin-typescript": "3.2.2",
+    "@vue/cli-service": "3.2.3",
+    "typescript": "3.2.2",
+    "vue-template-compiler": "2.5.21"
   }
 }
